# DFIR-AI

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml
.claude/: mcp-config.json  settings.json
.claude/agents/: evidence-custodian.md  linux-agent.md  macos-agent.md  verifier.md  windows-agent.md
.claude/hooks/: audit.sh  finalize.sh  guard.sh  inject-context.sh  session-start.sh
.claude/skills/accuracy-report/: SKILL.md
.claude/skills/chain-of-custody/: SKILL.md
.claude/skills/evidence-pin/: SKILL.md
.claude/skills/gap-acknowledgment/: SKILL.md
.claude/skills/ir-narrative/: SKILL.md
.claude/skills/linux-triage/: SKILL.md
.claude/skills/macos-triage/: SKILL.md
.claude/skills/memory-forensics/: SKILL.md
.claude/skills/self-correct/: SKILL.md
.claude/skills/triage-orchestrator/: SKILL.md
.github/workflows/: ci.yml  license-check.yml
corpus/: README.md
corpus/_template/: README.md  ground-truth.json
docs/: IMPLEMENTATION_PLAN.md  architecture.md  dataset-documentation.md  development.md  usage.md
mcp-server/: pyproject.toml
mcp-server/src/protocol_sift_mcp/: __init__.py  sandbox.py  schema.py  server.py
mcp-server/src/protocol_sift_mcp/tools/: __init__.py  evidence.py  finding.py  linux.py  macos.py  memory.py  parse.py  windows.py
mcp-server/tests/: conftest.py  test_evidence.py  test_macos.py  test_parse.py  test_sandbox.py  test_windows.py
scripts/: diff_findings.py  eval.sh  install.sh  plain-summary.py  record-demo.sh  replay.sh  self-collect.sh  serve.py
(+1 files in other folders)
