[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protocol-sift-mcp"
version = "0.1.0"
description = "MemoryHound Protocol SIFT MCP server — typed forensic primitives for autonomous DFIR triage"
readme = "../README.md"
license = { file = "../LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "MemoryHound Contributors" }
]
dependencies = [
    "mcp>=1.0",
    "pydantic>=2.5",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
forensics = [
    "python-magic>=0.4.27",
    "volatility3>=2.7.0",
    "python-evtx>=0.8.0",
    "python-registry>=1.3.0",
    "pefile>=2024.8.26",
    "yara-python>=4.5.0",
]

[project.scripts]
protocol-sift-mcp = "protocol_sift_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/protocol_sift_mcp"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=protocol_sift_mcp --cov-report=term-missing"
